test/tests/errors/error-jumpout-id-forgotten.sm
// true
// false
// false
/**/
/**/

program {
    var x: int = jumpout j: int in j(1);
    var y: int = jumpout k: int in j(1);
}